home page modified

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,9 @@
   </style>
 </head>
 <body>
+  <img class="img-fluid"  id="banner" src="https://palvinder-portfolio.onrender.com/static/header-bg.jpg" >
   <div class="container">
   <h1 class="text-center mt-2 mb-4" >Palvinder Kaur</h1>
-  <img class="img-fluid"  id="banner" src="https://portfolio.palvinderkaur.repl.co/static/header-bg.jpg" >
   <h2 class="text-center mt-2 mb-4">About Me</h2>
   <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum integer enim neque volutpat ac tincidunt. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Sem viverra aliquet eget sit amet. Est placerat in egestas erat imperdiet sed euismod. Nisl tincidunt eget nullam non nisi est. Tempor orci eu lobortis elementum nibh. Habitant morbi tristique senectus et netus et malesuada fames ac. Accumsan tortor posuere ac ut. Varius quam quisque id diam. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing.</p>
   <h2 class="text-center">My Projects</h2>
