--- a/templates/home.html
+++ b/templates/home.html
@@ -1,36 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Awaiken Theme">
+  <!-- Page Title -->
   <title>My Portfolio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <style>
-    #banner {
-      height: 360px;
-      width: 100%;
-      object-fit: cover;
-      margin-bottom: 16px;
-    }
-  </style>
-  </style>
+  <!-- Google Fonts css-->
+  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash%7CRoboto:300,400,400i,500,500i,700,700i,900" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+  <!-- Font Awesome icon css-->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/flaticon.css') }}">
+  
+  <!-- Swiper's CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/swiper.min.css') }}">
+  <!-- Animated css -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}">
+  <!-- Magnific Popup CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/magnific-popup.css') }}">
+  <!-- Animation Headline CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/animation-headline.css') }}">
+  <!-- Slick nav css -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/slicknav.css') }}">
+  
+  <!-- Main custom css -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+
 </head>
 <body>
-  <img class="img-fluid"  id="banner" src="https://palvinder-portfolio.onrender.com/static/header-bg.jpg" >
-  <div class="container">
-  <h1 class="text-center mt-2 mb-4" >Palvinder Kaur</h1>
-  <h2 class="text-center mt-2 mb-4">About Me</h2>
-  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum integer enim neque volutpat ac tincidunt. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Sem viverra aliquet eget sit amet. Est placerat in egestas erat imperdiet sed euismod. Nisl tincidunt eget nullam non nisi est. Tempor orci eu lobortis elementum nibh. Habitant morbi tristique senectus et netus et malesuada fames ac. Accumsan tortor posuere ac ut. Varius quam quisque id diam. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing.</p>
-  <h2 class="text-center">My Projects</h2>
-    <div>
-      {% for job in jobs %}
-        {%include 'jobitem.html'%}
-      {% endfor %}
+  <!-- Header Section Start -->
+  {% include 'nav.html' %}
+  <!-- Header Section End -->
+
+  <!-- Banner Slider Section starts -->
+  <div class="banner" id="home">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <!-- Banner Content Start-->
+          <div class="banner-content">
+            <h2 class="cd-headline clip">
+              <span class="before-heading">Hi There! I'm </span>
+              <span class="cd-words-wrapper">
+                <b class="is-visible">Data Visualisation Analyst</b>
+                <b>The Picasso of charts & graphs!</b>
+              </span>
+            </h2>
+            <p>I turn boring data into cool pictures. Armed with nothing but a keyboard and a caffeinated beverage. I make data look like as comic book – fun and easy to understand.</p>
+            <!--<a href="#" class="btn-download">More About Me</a>-->
+          </div>
+           <!--Banner Content End -->
+        </div>
+      </div>
     </div>
-    <div class="text-center">
-  <button class="btn btn-primary btn-lg">Contact Me</button>
-      <p class="text-center mt-4">copyright 2023, Palvinder</p>
+  </div>
+  <!-- Banner Slider Section ends -->
+
+  <!-- Portfolio Section Starts -->
+  <section class="portfolio" id="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <!-- Section title start -->
+          <div class="section-title">
+            <h2>Portfolio</h2>
+            <p>See My Works - Lorem ipsum dolor</p>
+          </div>
+          <!-- Section title end -->
+        </div>
+      </div>
+
+
+<!-- New Portfolio Sections Starts -->
+  <section id="gallery">
+    <div class="container">
+      <div class="row">
+      <div class="col-lg-4 mb-4">
+      <div class="card">
+        <img src="static/images/Stack_Overflow.png" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Stack Overflow Dev Survey</h5>
+          <p class="card-text">I have utilized data from Stack Overflow to examine how developers acquire new skills and progress, identify the tools they employ, and understand their preferences.  Review the diverse graphs and charts displaying the results of this analysis.</p>
+         <a href="{{ url_for('portfolio1') }}" class="btn btn-outline-success btn-sm">View Details</a>
+        </div>
+       </div>
+      </div>
+    <div class="col-lg-4 mb-4">
+    <div class="card">
+        <img src="static/images/portfolio-2.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Sunset</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+         <a href="" class="btn btn-outline-success btn-sm">View Details</a>
+        </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+      <div class="card">
+        <img src="static/images/portfolio-3.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Sunset</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+         <a href="" class="btn btn-outline-success btn-sm">View Details</a>
+        </div>
+       </div>
+      </div>
     </div>
-</div>
+  </div>
+  </section>
+  <!-- New Portfolio Sections Ends -->
+
+      <!-- About us Section Starts -->
+      <section class="about-us" id="about">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <!-- Section title start -->
+              <div class="section-title">
+                <h2>About Me</h2>
+                <p>Professional Profile - This Is All About Me</p>
+              </div>
+              <!-- Section title end -->
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4">
+              <!-- About image start -->
+              <div class="about-image wow fadeInLeft" data-wow-delay="0.3s">
+                <img src="static/images/about.jpg" alt="" />
+              </div>
+              <!-- About image end -->
+            </div>
+
+            <div class="col-lg-8">
+              <!-- About Content start -->
+              <div class="about-content wow fadeInUp" data-wow-delay="0.8s">
+                <h3>I'm Palvinder Kaur</h3>
+                <p>I am Data Visualization Analyst, adding a fresh perspective to transforming complex data into visually compelling insights. My dynamic leadership and proficiency in technology and market research make me a valuable asset in both strategic and analytical roles in the corporate landscape.
+</p>
+
+                <p>Taking about my experience I am seasoned professional with over a decade of experience in operations and IT management. Currently serving as Vice President of Operations at PhiBonacci Solutions, she specializes in implementing strategic changes for improved content development and organizational efficiency. With a background in team growth and development at Act It Out! and Designmate India Pvt Ltd, Palvinder is well-versed in project management and operations support.
+</p>
+
+                <ul>
+                  <li><i class="flaticon-phone-call"></i><b>Phone:</b> +91 9876543210</li>
+                  <li><i class="flaticon-email"></i><b>Email:</b> palvinder2006@gmail.com</li>
+                </ul>
+              </div>
+              <!-- About Content End -->
+              <div class="row">
+                <div class="col-md-10">
+                  <div class="load-more-portfolio">
+                    <a href="#">View Details</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- About us Section Ends -->
+
+  <!-- Contact us Section Starts -->
+  <section class="contactus" id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <!-- Section title start -->
+          <div class="section-title">
+            <h2>Get in touch</h2>
+            <p>Feel free to drop me a message</p>
+          </div>
+          <!-- Section title end -->
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
+          <!-- Contact Form start -->
+          <div class="contact-form">
+            <form id="contactForm" action="#" method="post">
+              <div class="row">
+                <div class="form-group col-md-6 col-sm-6">
+                  <input type="text" class="form-control" placeholder="Your Name">
+                </div>
+
+                <div class="form-group col-md-6 col-sm-6">
+                  <input type="email" class="form-control" placeholder="Your Email Address">
+                </div>
+
+                <div class="form-group col-md-12 col-sm-12">
+                  <input type="text" class="form-control" placeholder="Subject">
+                </div>
+
+                <div class="form-group col-md-12 col-sm-12">
+                  <textarea rows="4" class="form-control" placeholder="How can i help you?"></textarea>
+                </div>
+
+                <div class="col-md-12 col-sm-12 text-center">
+                  <button type="submit" class="btn-contact">Send</button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- Contact Form end -->
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Contact us Section Ends -->
+
+
+  <!-- Footer Section starts -->
+      {% include 'footer.html' %}
+  <!-- Footer Section Ends -->
+
+
+  <!-- Jquery Library File -->
+  <script src="{{ url_for('static', filename='js/jquery-1.12.4.min.js') }}"></script>
+  <!-- Bootstrap js file -->
+  <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+  <!-- Wow js file -->
+  <script src="{{ url_for('static', filename='js/wow.js') }}"></script>
+  <!-- Swiper Carousel js file -->
+  <script src="{{ url_for('static', filename='js/swiper.min.js') }}"></script>
+  <!-- Counterup js file -->
+  <script src="{{ url_for('static', filename='js/waypoints.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/jquery.counterup.min.js') }}"></script>
+  <!-- Isotop js file -->
+  <script src="{{ url_for('static', filename='js/isotope.min.js') }}"></script>
+  <!-- Magnific Popup core JS file -->
+  <script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js') }}"></script>
+  <!-- Slick Nav js file -->
+  <script src="{{ url_for('static', filename='js/jquery.slicknav.js') }}"></script>
+  <!-- SmoothScroll -->
+  <script src="{{ url_for('static', filename='js/SmoothScroll.js') }}"></script>
+  <!-- Animated Headline js file -->
+  <script src="{{ url_for('static', filename='js/animation-headline.js') }}"></script>
+    <!-- Main Custom js file -->
+  <script src="{{ url_for('static', filename='js/function.js') }}"></script>
+  
 </body>
 </html>
