--- a/templates/home.html
+++ b/templates/home.html
@@ -92,11 +92,11 @@
       </div>
     <div class="col-lg-4 mb-4">
     <div class="card">
-        <img src="static/images/portfolio-2.jpg" alt="" class="card-img-top">
+        <img src="static/images/Quicksight.png" alt="" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">Sunset</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
-         <a href="" class="btn btn-outline-success btn-sm">View Details</a>
+          <h5 class="card-title">Unlocking Insights with QuickSight</h5>
+          <p class="card-text">Excited to unveil an engaging and interactive COVID-19 visualization crafted with Amazon QuickSight. Explore and interact with the data to gain insightful perspectives on the pandemic's impact.</p>
+         <a href="{{ url_for('QuickSight') }}" class="btn btn-outline-success btn-sm">View Details</a>
         </div>
         </div>
       </div>
