coming soon project added

--- a/templates/home.html
+++ b/templates/home.html
@@ -102,10 +102,10 @@
       </div>
       <div class="col-lg-4 mb-4">
       <div class="card">
-        <img src="static/images/portfolio-3.jpg" alt="" class="card-img-top">
+        <img src="static/images/Stack Overflow.gif" alt="" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">Sunset</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+          <h5 class="card-title">Working on it!</h5>
+          <p class="card-text">I am currently working on a new data visualization that involves a dynamic and creative process. I will present it very soon, and I'm pretty excited about it! Stay tuned for some neat stuff!</p>
          <a href="" class="btn btn-outline-success btn-sm">View Details</a>
         </div>
        </div>
