modified quicksight page

--- a/templates/QuickSight.html
+++ b/templates/QuickSight.html
@@ -27,11 +27,15 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}"> 
 </head>
 <body>
-  <!-- Header Section Start -->
+
+  
+  <!-- Header Section Start-->
   <header class="header">
-    <nav class="navbar navbar-expand-md navbar-light fixed-top" id="main-navbar">
+    <nav class="navbar navbar-expand-md navbar-light " id="main-navbar">
       <div class="container">
-        <!-- Navbar Brand start -->
+  
+         <!--Navbar Brand start-->
+  
         <a class="navbar-brand" href="{{ url_for('home') }}">
           <h1><span>My</span>Portfolio</h1>
         </a>
@@ -46,7 +50,6 @@
               <h2 class="display-5 fw-bold text-white">Covid-19 Visualisation</h2>
               <div class="col-lg-6 mx-auto">
                 <img src="static/images/quicksight_logo.png" alt="" >
-                <p class="fs-5 mt-4">Excited to unveil an engaging and interactive COVID-19 visualization crafted with Amazon QuickSight. Explore and interact with the data to gain insightful perspectives on the pandemic's impact.</p>
                 </div>
               </div>
             </div>
@@ -55,9 +58,9 @@
     <!-- Banner Slider Section ends -->
 
     <!-- Portfolio 1 Section starts -->
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
+    <div class="">
+      <div class="row">
+        <div class="col-lg-12">
     <!-- Include the URL for Assignment.html -->
 
             <iframe
