home page about and portfolio section writeup

--- a/templates/home.html
+++ b/templates/home.html
@@ -69,7 +69,7 @@
           <!-- Section title start -->
           <div class="section-title">
             <h2>Portfolio</h2>
-            <p>See My Works - Lorem ipsum dolor</p>
+            <p>My Works - Unveiling Patterns in Chaos</p>
           </div>
           <!-- Section title end -->
         </div>
@@ -145,7 +145,7 @@
                 <p>I am Data Visualization Analyst, adding a fresh perspective to transforming complex data into visually compelling insights. My dynamic leadership and proficiency in technology and market research make me a valuable asset in both strategic and analytical roles in the corporate landscape.
 </p>
 
-                <p>Taking about my experience I am seasoned professional with over a decade of experience in operations and IT management. Currently serving as Vice President of Operations at PhiBonacci Solutions, she specializes in implementing strategic changes for improved content development and organizational efficiency. With a background in team growth and development at Act It Out! and Designmate India Pvt Ltd, Palvinder is well-versed in project management and operations support.
+                <p>Talking about my experience I am seasoned professional with over a decade of experience in operations and IT management. Currently serving as Vice President of Operations at PhiBonacci Solutions, I specializes in implementing strategic changes for improved content development and organizational efficiency. With a background in team growth and development at Act It Out! and Designmate India Pvt Ltd, I am well-versed in project management and operations support.
 </p>
 
                 <ul>
