new project added

--- a/templates/home.html
+++ b/templates/home.html
@@ -102,14 +102,24 @@
       </div>
       <div class="col-lg-4 mb-4">
       <div class="card">
-        <img src="static/images/Stack Overflow.gif" alt="" class="card-img-top">
+        <img src="static/images/education-india.gif" alt="" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">Working on it!</h5>
-          <p class="card-text">I am currently working on a new data visualization that involves a dynamic and creative process. I will present it very soon, and I'm pretty excited about it! Stay tuned for some neat stuff!</p>
-         <a href="" class="btn btn-outline-success btn-sm">View Details</a>
+          <h5 class="card-title">Education in India</h5>
+          <p class="card-text">Using data to understand how education works in India is really helpful for eLearning companies to make smart decisions. By tailoring their strategies to fit the specific needs of different regions and schools, all over India.</p>
+         <a href="{{ url_for('education_India') }}" class="btn btn-outline-success btn-sm">View Details</a>
         </div>
        </div>
       </div>
+        <div class="col-lg-4 mb-4">
+        <div class="card">
+          <img src="static/images/Stack Overflow.gif" alt="" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Working on it!</h5>
+            <p class="card-text">I am currently working on a new data visualization that involves a dynamic and creative process. I will present it very soon, and I'm pretty excited about it! Stay tuned for some neat stuff!</p>
+           <a href="" class="btn btn-outline-success btn-sm">View Details</a>
+          </div>
+         </div>
+        </div>
     </div>
   </div>
   </section>
