--- a/templates/education_India.html
+++ b/templates/education_India.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quicksight</title>
+    <title>Indian-Education</title>
   <!-- Google Fonts css-->
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash%7CRoboto:300,400,400i,500,500i,700,700i,900" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
@@ -27,15 +27,11 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}"> 
 </head>
 <body>
-
-  
-  <!-- Header Section Start-->
+  <!-- Header Section Start -->
   <header class="header">
-    <nav class="navbar navbar-expand-md navbar-light " id="main-navbar">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top" id="main-navbar">
       <div class="container">
-  
-         <!--Navbar Brand start-->
-  
+        <!-- Navbar Brand start -->
         <a class="navbar-brand" href="{{ url_for('home') }}">
           <h1><span>My</span>Portfolio</h1>
         </a>
@@ -47,9 +43,10 @@
     <main>
         <div class="text-secondary px-4 py-5 text-center">
             <div class="py-5">
-              <h2 class="display-5 fw-bold text-white">Covid-19 Visualisation</h2>
+              <h2 class="display-5 fw-bold text-white">Education in India</h2>
               <div class="col-lg-6 mx-auto">
-                <img src="static/images/quicksight_logo.png" alt="" >
+                <img src="" alt="" >
+                <p class="fs-5 mt-4">Using data to understand how education works in India is really helpful for eLearning companies to make smart decisions.</p>
                 </div>
               </div>
             </div>
@@ -58,21 +55,16 @@
     <!-- Banner Slider Section ends -->
 
     <!-- Portfolio 1 Section starts -->
-    <div class="">
-      <div class="row">
-        <div class="col-lg-12">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
     <!-- Include the URL for Assignment.html -->
-
-            <iframe
-                width="100%"
-                height="900"
-                src="https://ap-south-1.quicksight.aws.amazon.com/sn/embed/share/accounts/416931009088/dashboards/d17614a7-44d7-430b-bb21-a0f0d7ddbb68?directory_alias=myclass-analysis-2023">
-            </iframe>
+    <iframe src="{{ url_for('static', filename='portfolios/education_india.html') }}" width="100%" height="1000" ></iframe>
           </div>
         </div>
       </div>
     <!-- Portfolio 1 Section ends -->
-    
+
 
     <!-- Footer Section starts -->
         {% include 'footer.html' %}
