--- a/templates/home.html
+++ b/templates/home.html
@@ -159,7 +159,7 @@
 </p>
 
                 <ul>
-                  <li><i class="flaticon-phone-call"></i><b>Phone:</b> +91 9876543210</li>
+                  <!--<li><i class="flaticon-phone-call"></i><b>Phone:</b> +91 9876543210</li>-->
                   <li><i class="flaticon-email"></i><b>Email:</b> palvinder2006@gmail.com</li>
                 </ul>
               </div>
@@ -176,56 +176,6 @@
         </div>
       </section>
       <!-- About us Section Ends -->
-
-  <!-- Contact us Section Starts -->
-  <section class="contactus" id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <!-- Section title start -->
-          <div class="section-title">
-            <h2>Get in touch</h2>
-            <p>Feel free to drop me a message</p>
-          </div>
-          <!-- Section title end -->
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-8 offset-md-2">
-          <!-- Contact Form start -->
-          <div class="contact-form">
-            <form id="contactForm" action="#" method="post">
-              <div class="row">
-                <div class="form-group col-md-6 col-sm-6">
-                  <input type="text" class="form-control" placeholder="Your Name">
-                </div>
-
-                <div class="form-group col-md-6 col-sm-6">
-                  <input type="email" class="form-control" placeholder="Your Email Address">
-                </div>
-
-                <div class="form-group col-md-12 col-sm-12">
-                  <input type="text" class="form-control" placeholder="Subject">
-                </div>
-
-                <div class="form-group col-md-12 col-sm-12">
-                  <textarea rows="4" class="form-control" placeholder="How can i help you?"></textarea>
-                </div>
-
-                <div class="col-md-12 col-sm-12 text-center">
-                  <button type="submit" class="btn-contact">Send</button>
-                </div>
-              </div>
-            </form>
-          </div>
-          <!-- Contact Form end -->
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Contact us Section Ends -->
-
 
   <!-- Footer Section starts -->
       {% include 'footer.html' %}
